fix the vartical scrollbar from the pricing section

--- a/CSS/pricing.css
+++ b/CSS/pricing.css
@@ -9,7 +9,7 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-
+    overflow: hidden;
 }
 
 .pricing-plan {
